--- a/aplicacion/aplicacion/templates/tu_app/estudiante_form.html
+++ b/aplicacion/aplicacion/templates/tu_app/estudiante_form.html
@@ -10,7 +10,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card p-4">
-                    <h2 class="text-center mb-4">Registrar Asistencia</h2>
+                    <h2 class="text-center mb-4">Registrar Estudiante</h2>
                     <form method="post">
                         {% csrf_token %}
                         <label for="nombre">Nombre:</label>
