--- a/aplicacion/aplicacion/templates/tu_app/tipodocumento_form.html
+++ b/aplicacion/aplicacion/templates/tu_app/tipodocumento_form.html
@@ -1,5 +1,4 @@
-
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,19 +10,11 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card p-4">
-                    <h2 class="text-center mb-4">Registrar Evaluación</h2>
+                    <h2 class="text-center mb-4">Registrar Tipo de Documento</h2>
                     <form method="post">
                         {% csrf_token %}
-                        <label for="clase">Clase:</label>
-                      <select name="clase">
-                          {% for clase in clases %}
-                            <option value="{{ clase.id }}">{{ clase.curso.nombre }} - {{ clase.fecha }}</option>
-                          {% endfor %}
-                        </select><br/>
-                      <label for="nombre">Nombre de Evaluación:</label>
+                        <label for="nombre">Nombre del Tipo de Documento:</label>
                       <input name="nombre" required="" type="text"/><br/>
-                      <label for="fecha">Fecha:</label>
-                      <input name="fecha" type="date"/><br/>
                       <button type="submit">Guardar</button>
                       </form>
                 </div>
